--- a/_posts/2018-11-05-特征识别算法流程图.md
+++ b/_posts/2018-11-05-特征识别算法流程图.md
@@ -42,3 +42,28 @@ c2(yes)->e
 c2(no)->op2
 ```
 
+**流程图 2**
+
+``` flow
+st=>start: 模型导入
+e=>end: 程序结束
+op1=>operation: 获取属性邻接图
+op2=>operation: 获取加工面邻接图
+op3=>operation: 向容器中添加该特征
+op4=>operation: 获取最小条件子图
+op5=>operation: 遍历特征
+op6=>operation: 定义为其它特征
+sub1=>subroutine: NEXT
+c1=>condition: 特征库匹配？
+c2=>condition: 最后一个特征?
+c3=>condition: 特征库匹配?
+io=>inputoutput: 齿廓特征输出
+st->op1->op2->c1
+c1(yes,right)->op3->c2
+c1(no)->op4->c3
+c3(yes,left)->op3
+c2(yes,left)->io->e
+c2(no)->sub1(right)->c1
+c3(no)->op6->op3->c2
+```
+
