--- a/_posts/2018-11-17-优化网站性能的35条规则.md
+++ b/_posts/2018-11-17-优化网站性能的35条规则.md
@@ -8,7 +8,7 @@ tags:
 - 前端
 ---
 
-#### 最小化HTTP请求次数
+### 1. 最小化HTTP请求次数
 
 ​	最终用户响应时间的80％用于前端。大部分时间都在下载页面中的所有组件：图像，样式表，脚本，Flash等。减少组件数量反过来减少了呈现页面所需的HTTP请求数量。这是更快页面的关键。
 
@@ -24,7 +24,7 @@ tags:
 
 　　减少页面中HTTP请求的数量是可以开始的地方。这是提高首次访问者性能的最重要指南。正如Tenni Theurer的博客文章[浏览器缓存使用 - 暴露！](http://yuiblog.com/blog/2007/01/04/performance-research-part-2/)，您网站的每日访问者中有40-60％使用空缓存。让这些首次访问者快速访问页面是获得更好用户体验的关键。
 
-#### 使用内容分发网络（CDN）
+### 2. 使用内容分发网络（CDN）
 
 ​	用户与Web服务器的距离会对响应时间产生影响。在多个地理位置分散的服务器上部署内容将使您的页面从用户的角度加载更快。但是你应该从哪里开始呢？
 
@@ -36,7 +36,7 @@ tags:
 
 　　一些大型互联网公司拥有自己的CDN，但使用CDN服务提供商（如[Akamai Technologies](http://www.akamai.com/)，[EdgeCast](http://www.edgecast.com/)或[level3）](http://www.level3.com/index.cfm?pageID=36)具有成本效益。对于初创公司和私人网站来说，CDN服务的成本可能过高，但随着您的目标受众变得越来越大并变得更加全球化，CDN对于实现快速响应时间是必要的。在Yahoo！中，将静态内容从其应用程序Web服务器移动到CDN（如上所述的第三方以及Yahoo自己的[CDN](https://cwiki.apache.org/TS/traffic-server.html)）的属性将最终用户响应时间提高了20％或更多。切换到CDN是一个相对容易的代码更改，将显著提高您的网站的速度。
 
-#### 添加Expires或Cache-Control标头
+### 3. 添加Expires或Cache-Control标头
 
 这条规则有两个方面：
 
@@ -48,7 +48,7 @@ tags:
 
 ​	浏览器（和代理）使用缓存来减少HTTP请求的数量和大小，从而加快网页加载速度。Web服务器使用HTTP响应中的Expires头来告诉客户端可以缓存组件多长时间。这是一个遥远的未来Expires标题，告诉浏览器这个响应在2010年4月15日之前不会过时。
 
-```http
+``` http
 Expires: Thu, 15 Apr 2010 20:00:00 GMT
 ```
 
@@ -62,7 +62,7 @@ ExpiresDefault "access plus 10 years"
 
 ​	使用远期Expires标头仅在用户访问过您的网站后才会影响网页浏览量。当用户第一次访问您的站点并且浏览器的缓存为空时，它对HTTP请求的数量没有影响。因此，此性能改进的影响取决于用户使用已准备好的缓存命中您的页面的频率。（“已准备好的缓存”已包含页面中的所有组件。）我们[在Yahoo!上测量了这一点。](http://yuiblog.com/blog/2007/01/04/performance-research-part-2/)并发现带有固定缓存的页面查看次数为75-85％。通过使用远期的Expires标头，您可以增加浏览器缓存的组件数量，并在后续页面视图中重复使用，而无需通过用户的Internet连接发送单个字节。
 
-#### 使用Gzip组件
+### 4. 使用Gzip组件
 
 ​	通过前端工程师做出的决策，可以显着减少在网络上传输HTTP请求和响应所需的时间。确实，最终用户的带宽速度，互联网服务提供商，与对等交换点的距离等都超出了开发团队的控制范围。但是还有其他变量会影响响应时间。压缩通过减少HTTP响应的大小来减少响应时间。
 
@@ -88,7 +88,7 @@ Content-Encoding: gzip
 
 ​	尽可能多地压缩文件类型是减轻页面重量和加速用户体验的简便方法。
 
-#### 将CSS样式表放在头部
+### 5. 将CSS样式表放在头部
 
 ​	在研究Yahoo!的性能时，我们发现将样式表移动到文档HEAD会使页面*看起来*加载速度更快。这是因为将样式表放在HEAD中允许页面逐步呈现。
 
@@ -98,7 +98,7 @@ Content-Encoding: gzip
 
 ​	[HTML规范](http://www.w3.org/TR/html4/struct/links.html#h-12.3)明确指出，样式表是被包括在网页的HEAD：“与A，[LINK]可以仅出现在一个文档的HEAD部分，尽管它可能出现任意次数”。这些替代品，空白的白色屏幕或无风格内容的闪光都是值得冒险的。最佳解决方案是遵循HTML规范并在文档HEAD中加载样式表。
 
-#### 将JavaScript脚本放在底部
+### 6. 将JavaScript脚本放在底部
 
 ​	脚本引起的问题是它们阻止了并行下载。[HTTP / 1.1规范](http://www.w3.org/Protocols/rfc2616/rfc2616-sec8.html#sec8.1.4)建议的浏览器下载不超过两种组分在每主机名平行。如果您从多个主机名提供图像，则可以并行执行两次以上的下载。但是，在下载脚本时，即使在不同的主机名上，浏览器也不会启动任何其他下载。
 
@@ -106,9 +106,9 @@ Content-Encoding: gzip
 
 ​	经常出现的另一种建议是使用延迟脚本。该`DEFER`属性表明该脚本不包含document.write，并且是浏览器可以继续呈现的线索。不幸的是，Firefox不支持该`DEFER`属性。在Internet Explorer中，脚本可能会延迟，但不是所需的。如果可以延迟脚本，也可以将其移动到页面底部。这将使您的网页加载速度更快。
 
-#### 避免使用CSS中的expressions
+### 7. 避免使用CSS中的expressions
 
-​	CSS表达式是一种动态设置CSS属性的强大（且危险）方法。从版本5开始，它们在Internet Explorer中受支持，但从[IE8开始不推荐使用](http://msdn.microsoft.com/en-us/library/ms537634%28VS.85%29.aspx)。例如，可以使用CSS表达式将背景颜色设置为每小时交替：  
+​	CSS表达式是一种动态设置CSS属性的强大（且危险）方法。从版本5开始，它们在Internet Explorer中受支持，但从[IE8开始不推荐使用](http://msdn.microsoft.com/en-us/library/ms537634%28VS.85%29.aspx)。例如，可以使用CSS表达式将背景颜色设置为每小时交替：
 
 ``` css
 background-color: expression((new Date()).getHours()%2 ? "#B8D4FF" : "#F08A00");
@@ -120,7 +120,7 @@ background-color: expression((new Date()).getHours()%2 ? "#B8D4FF" : "#F08A00");
 
 ​	减少CSS表达式求值次数的一种方法是使用一次性表达式，其中第一次计算表达式时，它将style属性设置为显式值，这将替换CSS表达式。如果必须在页面的整个生命周期中动态设置样式属性，则使用事件处理程序而不是CSS表达式是另一种方法。如果必须使用CSS表达式，请记住它们可能会被评估数千次，并可能影响页面的性能。
 
-#### 将JavaScript和CSS独立成外部文件
+### 8. 将JavaScript和CSS独立成外部文件
 
 ​	其中许多性能规则都涉及外部组件的管理方式。但是，在出现这些考虑因素之前，您应该提出一个更基本的问题：JavaScript和CSS是否应该包含在外部文件中，还是内嵌在页面中？
 
@@ -132,7 +132,7 @@ background-color: expression((new Date()).getHours()%2 ? "#B8D4FF" : "#F08A00");
 
 ​	对于通常是许多页面视图中的第一个的首页，有一些技术可以利用内联提供的HTTP请求的减少，以及通过使用外部文件实现的缓存优势。其中一种技术是在首页中内联JavaScript和CSS，但在页面加载完成后动态下载外部文件。后续页面将引用应该已存在于浏览器缓存中的外部文件。
 
-#### 减少DNS查询
+### 9. 减少DNS查询
 
 　　域名系统（DNS）将主机名映射到IP地址，就像电话簿将人们的姓名映射到他们的电话号码一样。当您在浏览器中键入www.yahoo.com 时，浏览器联系的DNS解析器将返回该服务器的IP地址。DNS有成本。DNS通常需要20-120毫秒才能查找给定主机名的IP地址。在DNS查找完成之前，浏览器无法从此主机名下载任何内容。
 
@@ -144,7 +144,7 @@ background-color: expression((new Date()).getHours()%2 ? "#B8D4FF" : "#F08A00");
 
 　　减少唯一主机名的数量有可能减少页面中发生的并行下载量。避免DNS查找会缩短响应时间，但减少并行下载可能会缩短响应时间。我的准则是将这些组件分成至少两个但不超过四个主机名。这导致在减少DNS查找和允许高度并行下载之间的良好折衷。
 
-#### 压缩JavaScript和CSS(包括内联`<script>`和`<style>`)
+### 10. 压缩JavaScript和CSS(包括内联`<script>`和`<style>`)
 
 　　压缩是从代码中删除不必要的字符以减小其大小从而改善加载时间的做法。压缩代码时，将删除所有注释，以及不需要的空格字符（空格，换行符和制表符）。在JavaScript的情况下，这改善了响应时间性能，因为下载文件的大小减小了。用于压缩JavaScript代码的两种流行工具是[JSMin](http://crockford.com/javascript/jsmin)和[YUI Compressor](https://developer.yahoo.com/yui/compressor/)。YUI压缩器也可以压缩CSS。
 
@@ -152,11 +152,11 @@ background-color: expression((new Date()).getHours()%2 ? "#B8D4FF" : "#F08A00");
 
 　　除了压缩外部脚本和样式之外，内联`<script>`和`<style>`块也可以并且也应该压缩。即使你gzip你的脚本和样式，压缩它们仍然会减小5％或更多的大小。随着JavaScript和CSS的使用和大小的增加，压缩代码所节省的成本也会增加。
 
-#### 避免重定向
+### 11. 避免重定向
 
 　　使用301和302状态代码完成重定向。以下是301响应中HTTP标头的示例：
 
-```http
+``` http
 HTTP/1.1 301 Moved Permanently
 Location: http://example.com/newuri
 Content-Type: text/html
@@ -170,7 +170,7 @@ Content-Type: text/html
 
 　　将旧网站连接到新网站是重定向的另一种常见用途。其他包括连接网站的不同部分并基于特定条件（浏览器类型，用户帐户类型等）指导用户。使用重定向连接两个网站很简单，只需要很少的额外编码。虽然在这些情况下使用重定向会降低开发人员的复杂性，但会降低用户体验。使用重定向的替代方法包括使用`Alias`以及`mod_rewrite`两个代码路径是否托管在同一服务器上。如果域名更改是使用重定向的原因，则另一种方法是创建CNAME（创建从一个域名指向另一个域名的别名的DNS记录）与`Alias`或组合`mod_rewrite`。
 
-#### 删除重复的脚本
+### 12. 删除重复的脚本
 
 　　在一个页面中两次包含相同的JavaScript文件会损害性能。这并不像你想象的那么不寻常。对美国十大顶级网站的评论显示，其中两个网站包含重复的脚本。两个主要因素会增加脚本在单个网页中重复的几率：团队规模和脚本数量。当它发生时，重复的脚本会通过创建不必要的HTTP请求和浪费的JavaScript执行来损害性能。
 
@@ -187,20 +187,20 @@ Content-Type: text/html
 　　PHP中的另一种选择是创建一个名为insertScript的函数。
 
 ``` php
-<? php insertScript（"menu.js"）?>
+<? php insertScript("menu.js")?>
 ```
 
 　　除了防止多次插入相同的脚本之外，此函数还可以处理脚本的其他问题，例如依赖性检查和向脚本文件名添加版本号以支持远期的Expires头。
 
-#### 配置实体标记ETag
+### 13. 配置实体标记ETag
 
 　　实体标记（ETag）是Web服务器和浏览器用于确定浏览器缓存中的组件是否与源服务器上的组件匹配的机制。（“实体”是另一个词“组件”：图像，脚本，样式表等）。添加ETag以提供验证比上次修改日期更灵活的实体的机制。ETag是唯一标识组件的特定版本的字符串。唯一的格式约束是引用字符串。源服务器使用`ETag`响应头指定组件的ETag 。
 
 ``` http
- HTTP/1.1 200 OK
- Last-Modified: Tue, 12 Dec 2006 03:03:59 GMT
- ETag: "10c24bc-4ab-457e1c1f"
- Content-Length: 12195
+HTTP/1.1 200 OK
+Last-Modified: Tue, 12 Dec 2006 03:03:59 GMT
+ETag: "10c24bc-4ab-457e1c1f"
+Content-Length: 12195
 ```
 
 　　之后，如果浏览器必须验证组件，它将使用`If-None-Match`标头将ETag传递回原始服务器。如果ETag匹配，则返回304状态代码，从而将响应减少12195字节。
@@ -227,7 +227,7 @@ HTTP/1.1 304 Not Modified
 FileETag none
 ```
 
-#### 使Ajax可以缓存
+### 14. 使Ajax可以缓存
 
 　　Ajax的一个优点是它为用户提供即时反馈，因为它从后端Web服务器异步请求信息。但是，使用Ajax并不能保证用户不会在等待那些异步JavaScript和XML响应返回时大拇指。在许多应用程序中，用户是否保持等待取决于Ajax的使用方式。例如，在基于Web的电子邮件客户端中，用户将一直等待Ajax请求的结果，以查找符合其搜索条件的所有电子邮件。重要的是要记住“异步”并不意味着“瞬时”。
 
@@ -243,7 +243,7 @@ FileETag none
 
 　　即使您的Ajax响应是动态创建的，并且可能仅适用于单个用户，它们仍然可以缓存。这样做可以使您的Web 2.0应用程序更快。
 
-#### 尽早清除缓存
+### 15. 尽早清除缓存
 
 　　当用户请求页面时，后端服务器可能需要200到500毫秒才能将HTML页面拼接在一起。在此期间，浏览器在等待数据到达时处于空闲状态。在PHP中，您有函数[flush()](http://php.net/flush)。它允许您将部分准备好的HTML响应发送到浏览器，以便浏览器可以在后端忙于HTML页面的其余部分时开始获取组件。这种好处主要出现在繁忙的后端或轻量级前端。
 
@@ -261,13 +261,13 @@ FileETag none
 
 　　[雅虎 搜索](http://search.yahoo.com/)开创性研究和真实用户测试，以证明使用此技术的好处。
 
-#### 使用GET进行Ajax请求
+### 16. 使用GET进行Ajax请求
 
 　　在[雅虎 邮件](http://mail.yahoo.com/)团队发现，在使用时`XMLHttpRequest`，POST在浏览器中实现为两步过程：首先发送标头，然后发送数据。因此最好使用GET，它只需要一个TCP数据包发送（除非你有很多cookie）。IE中的最大URL长度为**2K**，因此如果发送的数据超过**2K**，则可能无法使用GET。
 
 　　一个有趣的副作用是没有实际发布任何数据的POST就像GET一样。根据[HTTP规范](http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html)，GET用于检索信息，因此当您仅请求数据时，使用GET是有意义的（语义上），而不是将数据发送到服务器端存储。
 
-#### 延迟加载组件
+### 17. 延迟加载组件
 
 　　您可以仔细查看您的页面并问自己：“页面最初渲染必要的是什么？”。其余的内容和组件可以等待。
 
@@ -277,7 +277,7 @@ FileETag none
 
 　　当性能目标与其他Web开发最佳实践一致时，这是很好的。在这种情况下，渐进增强的想法告诉我们，JavaScript在受支持时可以改善用户体验，但您必须确保即使没有JavaScript也能正常工作。因此，在确保页面正常工作之后，您可以使用一些后期加载的脚本来增强它，这些脚本可以为您提供更多的花俏功能，例如拖放和动画。
 
-#### 预加载组件
+### 18. 预加载组件
 
 　　预加载可能看起来与延迟加载相反，但它实际上有不同的目标。通过预加载组件，您可以利用浏览器空闲的时间并请求将来需要的组件（如图像，样式和脚本）。这样，当用户访问下一页时，您可以将大部分组件放在缓存中，并且您的页面将为用户加载更快。
 
@@ -287,7 +287,7 @@ FileETag none
 - **条件**预加载 - 基于用户操作，您可以进行有根据的猜测，即用户前进的位置并相应地预加载。在[search.yahoo.com](http://search.yahoo.com/)上，您可以看到在开始输入输入框后如何请求一些额外的组件。
 - **预期的**预加载 - 在启动重新设计之前提前预加载。经常在重新设计之后听到：“新网站很酷，但比以前慢”。部分问题可能是用户使用完整缓存访问旧网站，但新网站始终是空缓存体验。您可以通过在启动重新设计之前预加载某些组件来缓解此副作用。您的旧站点可以使用浏览器空闲的时间并请求新站点将使用的图像和脚本
 
-#### 减少DOM元素的数量
+### 19. 减少DOM元素的数量
 
 　　复杂页面意味着要下载更多字节，这也意味着JavaScript中的DOM访问速度更慢。例如，当您想要添加事件处理程序时，如果在页面上循环遍历500或5000个DOM元素，则会有所不同。
 
@@ -303,13 +303,13 @@ document.getElementsByTagName('*').length;
 
 　　那到底有多少DOM元素才算少？检查具有良好标记的其他类似页面。例如[雅虎！主页](http://www.yahoo.com/)是一个非常繁忙的页面，仍然不到700个元素（HTML标记）。
 
-#### 跨域拆分组件
+### 20. 跨域拆分组件
 
 　　拆分组件允许您最大化并行下载。由于DNS查询惩罚，请确保您使用的域名不超过2-4个。例如，您可以托管HTML和动态内容，`www.example.org` 并在`static1.example.org`和之间拆分静态组件`static2.example.org`
 
 　　有关更多信息，请查看Tenni Theurer和Patty Chi的“ [在Carpool Lane中最大化并行下载](http://yuiblog.com/blog/2007/04/11/performance-research-part-4/) ”。
 
-#### 最小化iframe数量
+### 21. 最小化iframe数量
 
 　　iframe允许将HTML文档插入父文档中。了解iframe如何运作以便有效使用非常重要。
 
@@ -327,13 +327,13 @@ document.getElementsByTagName('*').length;
 - 阻止页面onload
 - 非语义
 
-#### 尽量不用404s
+### 22. 尽量不用404s
 
 　　HTTP请求很昂贵，因此发出HTTP请求并获得无用的响应（即404 Not Found）是完全没必要的，并且会在没有任何好处的情况下减慢用户体验。
 
 　　有些网站有帮助404表示 ”你的意思是XXX？”，这对用户体验很有好处，但也浪费了服务器资源（比如数据库等）。特别糟糕的是当外部JavaScript的链接错误并且结果是404时。首先，此下载将阻止并行下载。接下来，浏览器可能会尝试解析404响应主体，就像它是JavaScript代码一样，试图找到可用的东西。
 
-#### 减小Cookie大小
+### 23. 减小Cookie大小
 
 　　HTTP cookie的使用有多种原因，例如身份验证和个性化。有关cookie的信息在Web服务器和浏览器之间的HTTP标头中进行交换。保持cookie的大小尽可能低是非常重要的，以尽量减少对用户响应时间的影响。
 
@@ -344,7 +344,7 @@ document.getElementsByTagName('*').length;
 - 请注意在适当的域级别设置cookie，以免其他子域受到影响
 - 适当地设置过期日期。较早的Expires日期或者没有更早删除cookie，从而改善了用户响应时间
 
-#### 对组建使用cookie-free的域名
+### 24. 对组建使用cookie-free的域名
 
 　　当浏览器发出静态图像请求并将cookie与请求一起发送时，服务器对这些cookie没有任何用处。所以他们只是没有充分理由创建网络流量。您应该确保使用无cookie请求请求静态组件。创建一个子域并在那里托管所有静态组件。
 
@@ -352,7 +352,7 @@ document.getElementsByTagName('*').length;
 
 　　在无cookie域上托管静态组件的另一个好处是，某些代理可能拒绝缓存使用cookie请求的组件。在相关说明中，如果您想知道是否应该使用https://example.org或https://www.example.org作为主页，请考虑cookie的影响。省略www会让您别无选择，只能写入cookie `*.example.org`，因此出于性能原因，最好使用www子域并将cookie写入该子域。
 
-#### 最小化DOM的访问次数
+### 25. 最小化DOM的访问次数
 
 ​	使用JavaScript访问DOM元素的速度很慢，因此为了获得响应更快的页面，您应该：
 
@@ -362,7 +362,7 @@ document.getElementsByTagName('*').length;
 
 　　有关更多信息，请查看 Julien Lecomte 的YUI影院的 [“高性能Ajax应用程序”](http://yuiblog.com/blog/2007/12/20/video-lecomte/)。
 
-#### 开发巧妙的事件处理程序
+### 26. 开发巧妙的事件处理程序
 
 　　有时页面感觉响应性较差，因为过多的事件处理程序附加到DOM树的不同元素，然后执行得太频繁。这就是为什么使用*事件委托*是一个很好的方法。如果a中有10个按钮`div`，则只将一个事件处理程序附加到div包装器，而不是每个按钮一个处理程序。事件冒出来，这样你就可以捕捉事件并找出它来自哪个按钮。
 
@@ -370,19 +370,19 @@ document.getElementsByTagName('*').length;
 
 　　有关更多信息，请查看 Julien Lecomte 的YUI影院的 [“高性能Ajax应用程序”](http://yuiblog.com/blog/2007/12/20/video-lecomte/)。
 
-#### 优先选择使用`<link>`而非`@import`
+### 27. 优先选择使用`<link>`而非`@import`
 
 　　之前的最佳实践之一声明CSS应位于顶部以允许渐进式渲染。
 
 　　在IE中，`@import`行为与`<link>`在页面底部使用相同，因此最好不要使用它。
 
-#### 避免使用filters
+### 28 避免使用filters
 
 　　IE专有的`AlphaImageLoader`过滤器旨在解决IE版本<7中的半透明真彩色PNG的问题。该过滤器的问题在于它在下载图像时阻止渲染并冻结浏览器。它还会增加内存消耗，并且每个元素应用，而不是每个图像，因此问题成倍增加。
 
 　　最好的方法是`AlphaImageLoader`完全避免使用优雅降级的PNG8，这在IE中很好。如果你绝对需要`AlphaImageLoader`，使用下划线黑客`_filter`不会惩罚你的IE7 +用户。
 
-#### 优化图片
+### 29. 优化图片
 
 　　设计师完成为您的网页创建图像后，在将这些图像FTP到Web服务器之前，仍然可以尝试一些操作。
 
@@ -397,13 +397,13 @@ document.getElementsByTagName('*').length;
 - 在所有JPEG上运行jpegtran。此工具执行无损JPEG操作（如旋转），还可用于优化和删除图像中的注释和其他无用信息（如EXIF信息）。
 - `jpegtran -copy none -optimize -perfect src.jpg dest.jpg`
 
-#### 优化CSS Sprites　
+### 30. 优化CSS Sprites　
 
 - 将图像水平排列在精灵中而不是垂直排列通常会导致文件较小。
 - 在精灵中组合相似的颜色可以帮助您保持较低的颜色数，理想情况下在256色以下，以适应PNG8。
 - “适合移动设备”并且不要在精灵中留下大的间隙。这不会影响文件大小，但需要较少的内存，以便用户代理将图像解压缩为像素图。100x100图像是1万像素，其中1000x1000是100万像素
 
-#### 不要在HTML中缩放图像
+### 31 不要在HTML中缩放图像
 
 　　不要使用比您需要的更大的图像，因为您可以在HTML中设置宽度和高度。如果您需要，
 
@@ -413,7 +413,7 @@ document.getElementsByTagName('*').length;
 
 　　那么您的图像（mycat.jpg）应该是100x100px而不是缩小的500x500px图像。
 
-#### 减小favicon.ico的大小并缓存
+### 32. 减小favicon.ico的大小并缓存
 
 　　favicon.ico是一个保留在服务器根目录中的映像。这是一个必要的邪恶，因为即使你不关心它，浏览器仍然会请求它，所以最好不要回复404 Not Found。此外，由于它位于同一台服务器上，因此每次请求时都会发送cookie。此图像也会干扰下载顺序，例如在IE中，当您在onload中请求额外组件时，将在这些额外组件之前下载favicon。
 
@@ -424,17 +424,17 @@ document.getElementsByTagName('*').length;
 
 [Imagemagick](http://www.imagemagick.org/)可以帮助您创建小的favicons
 
-#### 保持组件小于25K
+### 33. 保持组件小于25K
 
 　　此限制与iPhone不会缓存大于25K的组件这一事实有关。请注意，这是**未压缩的**大小。这是缩小很重要的地方，因为单独使用gzip可能还不够。
 
 ​	欲了解更多信息，请查看Wayne Shea和Tenni Theurer的[性能研究，第5部分：iPhone可缓存性 - 让它坚持下去](http://yuiblog.com/blog/2008/02/06/iphone-cacheability/) 。
 
-#### 将组件拆分到多个文档中
+### 34. 将组件拆分到多个文档中
 
 　　将组件打包到多部分文档就像带有附件的电子邮件，它可以帮助您通过一个HTTP请求获取多个组件（请记住：HTTP请求很昂贵）。使用此技术时，首先检查用户代理是否支持它（iPhone不支持）。
 
-#### 避免设置空图像的src
+### 35. 避免设置空图像的src
 
 　　带有空字符串src属性的图像会出现多个预期。它以两种形式出现：
 
