update an artical

--- a/_posts/2018-11-17-优化网站性能的35条规则.md
+++ b/_posts/2018-11-17-优化网站性能的35条规则.md
@@ -48,13 +48,13 @@ tags:
 
 ​	浏览器（和代理）使用缓存来减少HTTP请求的数量和大小，从而加快网页加载速度。Web服务器使用HTTP响应中的Expires头来告诉客户端可以缓存组件多长时间。这是一个遥远的未来Expires标题，告诉浏览器这个响应在2010年4月15日之前不会过时。
 
-``` http
+``` makefile
 Expires: Thu, 15 Apr 2010 20:00:00 GMT
 ```
 
 ​       如果您的服务器是Apache，请使用ExpiresDefault指令设置相对于当前日期的到期日期。ExpiresDefault指令的这个示例将Expires日期设置为距请求时间10年。
 
-``` http
+``` makefile
 ExpiresDefault "access plus 10 years"
 ```
 
@@ -68,13 +68,13 @@ ExpiresDefault "access plus 10 years"
 
 从HTTP / 1.1开始，Web客户端表示支持使用HTTP请求中的Accept-Encoding标头进行压缩。
 
-``` http
+``` makefile
 Accept-Encoding: gzip, deflate
 ```
 
 ​	如果Web服务器在请求中看到此标头，它可能会使用客户端列出的方法之一压缩响应。Web服务器通过响应中的Content-Encoding标头向Web客户端通知此情况。
 
-``` http
+``` makefile
 Content-Encoding: gzip
 ```
 
@@ -251,9 +251,11 @@ FileETag none
 
 例：
 
-``` html
+``` php+HTML
+<head>
 <!-- css,js -->
 </head>
+<body>
 <?php flush();?>
 <body>
 <!-- content -->
@@ -440,12 +442,12 @@ document.getElementsByTagName('*').length;
 
 1. HTML
 ``` html
-> <img src ="">
+<img src ="">
 ```
 2. JavaScript
 ``` javascript
-> var img = new Image(); 
-> img.src ="";
+var img = new Image(); 
+img.src ="";
 ```
 　　两种形式都会产生相同的效果：浏览器向您的服务器发出另一个请求
 
