--- a/_posts/2018-11-17-优化网站性能的35条规则.md
+++ b/_posts/2018-11-17-优化网站性能的35条规则.md
@@ -54,7 +54,7 @@ Expires: Thu, 15 Apr 2010 20:00:00 GMT
 
 ​       如果您的服务器是Apache，请使用ExpiresDefault指令设置相对于当前日期的到期日期。ExpiresDefault指令的这个示例将Expires日期设置为距请求时间10年。
 
-``` makefile
+``` bash
 ExpiresDefault "access plus 10 years"
 ```
 
@@ -252,13 +252,11 @@ FileETag none
 例：
 
 ``` html
-<head>
-<!-- css,js -->
+<!-- css/js -->
 </head>
-<body>
 <?php flush();?>
-<body>
 <!-- content -->
+<body>
 ```
 
 　　[雅虎 搜索](http://search.yahoo.com/)开创性研究和真实用户测试，以证明使用此技术的好处。
@@ -446,7 +444,7 @@ document.getElementsByTagName('*').length;
 ```
 2. JavaScript
 ``` javascript
-var img = new Image(); 
+var img = new Image();
 img.src ="";
 ```
 　　两种形式都会产生相同的效果：浏览器向您的服务器发出另一个请求
