--- a/_posts/2018-11-24-简述浏览器渲染原理.md
+++ b/_posts/2018-11-24-简述浏览器渲染原理.md
@@ -35,7 +35,7 @@ tag:
 
 ​	解析html用以构建DOM树，然后构建Render树(呈现树)，接着布局Render树，最后绘制Render树。流程如**图1**所示。
 
-![渲染流程](https://pic002.cnblogs.com/images/2011/265173/2011110316263715.png)
+![渲染流程](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/flow.png)
 
 <center><b>图1 </b>渲染引擎基本流程</center>
 
@@ -47,11 +47,11 @@ tag:
 
 - 值得注意的是，这个过程是逐步完成的，为了更好的用户体验，渲染引擎将会尽可能早的将内容呈现到屏幕上，并不会等到所有的html都解析完成之后再去构建和布局Render树。它是边解析边显示，解析一部分内容就显示一部分内容，同时，可能还会通过网络下载其余内容。
 
-![Webkit引擎解析模式](https://pic002.cnblogs.com/images/2011/265173/2011110316264892.png)
+![Webkit引擎解析模式](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/webkitflow.png)
 
 <center><b>图2 </b>Webkit引擎渲染主流程</center>
 
-![Gecko渲染主流程](https://pic002.cnblogs.com/images/2011/265173/2011110316270146.jpg)
+![Gecko渲染主流程](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/image008.jpg)
 
 <center><b>图3 </b>Gecko引擎渲染主流程</center>
 
