--- a/_posts/2018-11-24-简述浏览器渲染原理.md
+++ b/_posts/2018-11-24-简述浏览器渲染原理.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "简述浏览器渲染原理"
+title:  "浏览器原理"
 date: 2018-11-24
-excerpt: "从地址栏到页面呈现过程"
+excerpt: "从地址栏到页面呈现过程，从浏览器多进程到JS单线程，从JS单线程最后到JS运行机制"
 tag:
 - 前端
 ---
 
-### 浏览器的高级架构
+## 1 浏览器的高级架构
 
 ​	浏览器的主要组件是：
 
@@ -23,13 +23,13 @@ tag:
 
 <center><b>图0 </b>浏览器组件</center>
 
-### 渲染引擎
+## 2 渲染引擎
 
 ​	不同的浏览器使用不同的渲染引擎：Internet Explorer使用Trident，Firefox使用Gecko，Safari使用WebKit。Chrome和Opera（来自15版）使用Blink，一个WebKit的分支。
 
 ​	WebKit是一个开源渲染引擎，起初是Linux平台的引擎，并由Apple修改以支持Mac和Windows。有关详细信息，请参阅[webkit.org](http://webkit.org/)。	
 
-### 主流程(The main flow)
+## 3 主流程(The main flow)
 
 ​	渲染引擎首先通过网络获得所请求文档的内容，通常以8K分块的方式完成。渲染引擎在获取内容后的基本流程如下：
 
@@ -57,8 +57,32 @@ tag:
 
 ​	从**图2**和**图3**中可以看出，尽管Webkit和Gecko使用的术语稍有不同，他们的主要流程基本相同。Gecko称可见的格式化元素组成的树为frame树，每个元素都是一个frame，Webkit则使用Render树这个名词来命名由渲染对象组成的树。Webkit中元素的定位称为布局，而Gecko中称为回流。Webkit称利用DOM节点及样式信息去构建Render树的过程为attachment，Geoko在html和DOM树之间附加了一层，这层称为内容接收器，相当制造DOM元素的工厂。
 
-### Origin
+## 4 浏览器的进程
+
+### 4.1 多进程的浏览器
+
+* Browser进程：浏览器的主进程(负责协调、主控)，仅有一个。作用包括：
+   - 负责浏览器界面显示，与用户交互。如前进，后退，标签，主页等；
+   - 负责各个页面的管理，创建和销毁等其他过程；
+   - 将Renderer进程得到的内存中的Bitmap，绘制到用户界面上；
+   - 网络资源的管理里，下载等；
+* 第三方插件进程：每种类型的插件对应一个进程，仅当使用该插件时才创建，如通过浏览器的扩展程序，使用PDF查看器插件就能显示PDF文档。
+* GPU进程：最多一个，用于3D绘制等。
+* 浏览器渲染进程(浏览器内核)(Render进程，内部是多线程)：默认每个Tab页面一个进程，互不影响，主要作用是页面渲染，脚本执行，事件处理等。
+
+> 优势：
+>
+> + 避免单个page crash影响到整个浏览器的运行
+> + 避免第三方插件crash影响到真个浏览器
+> + 多进程充分利用多核优势
+> + 方便使用沙盒模型隔离插件等过程，提高浏览器的生存能力 *
+
+**注意：**`这样做会带来内存的消耗，但长远来看，在浏览器中用空间换时间的策略还是值得的。`
+
+## 5 Reference
 
 [浏览器内部工作原理](https://kb.cnblogs.com/page/129756/)
 
 [How Browsers Work: Behind the scenes of modern web browsers](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/)
+
+[从浏览器多进程到JS单线程，JS运行机制](https://juejin.im/post/5a6547d0f265da3e283a1df7)
