--- a/_posts/2018-11-05-特征识别算法流程图.md
+++ b/_posts/2018-11-05-特征识别算法流程图.md
@@ -4,8 +4,7 @@ title:  "特征识别算法流程图"
 date:   2018-11-08 21：21
 excerpt: "回转类特征识别算法研究"
 tag:
-- feature
-- recognition
+- feature recognition
 - manufacturing
 comments: true
 ---
