--- a/_posts/2018-11-24-简述浏览器渲染原理.md
+++ b/_posts/2018-11-24-简述浏览器渲染原理.md
@@ -81,8 +81,8 @@ tag:
 
 ## 5 Reference
 
-[浏览器内部工作原理](https://kb.cnblogs.com/page/129756/)
-
 [How Browsers Work: Behind the scenes of modern web browsers](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/)
+
+[浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
 
 [从浏览器多进程到JS单线程，JS运行机制](https://juejin.im/post/5a6547d0f265da3e283a1df7)
