--- a/_posts/2018-11-24-简述浏览器渲染原理.md
+++ b/_posts/2018-11-24-简述浏览器渲染原理.md
@@ -68,7 +68,7 @@ tag:
    - 网络资源的管理里，下载等；
 * 第三方插件进程：每种类型的插件对应一个进程，仅当使用该插件时才创建，如通过浏览器的扩展程序，使用PDF查看器插件就能显示PDF文档。
 * GPU进程：最多一个，用于3D绘制等。
-* 浏览器渲染进程(浏览器内核)(Render进程，内部是多线程)：默认每个Tab页面一个进程，互不影响，主要作用是页面渲染，脚本执行，事件处理等。
+* 浏览器渲染进程(浏览器内核，Render进程，内部是多线程)：默认每个Tab页面一个进程，互不影响，主要作用是页面渲染，脚本执行，事件处理等(浏览器也会做些优化，把多个空白Tab页合并成一个进程)。
 
 > 优势：
 >
@@ -77,12 +77,37 @@ tag:
 > + 多进程充分利用多核优势
 > + 方便使用沙盒模型隔离插件等过程，提高浏览器的生存能力 *
 
-**注意：**`这样做会带来内存的消耗，但长远来看，在浏览器中用空间换时间的策略还是值得的。`
+**注意：**`这样做会带来内存的不小消耗，但从长远来看，在浏览器中用空间换时间的策略还是值得的。`
 
+### 4.2 浏览器内核
+
++ **GUI渲染线程**
+  - 负责渲染浏览器界面，解析HTML，CSS，构建DOM树和呈现树(Render tree)，布局呈现树和绘制呈现树。
+  - 当界面需要重绘(Repaint)或由于某种操作发生回流(Reflow)时，该线程就会执行。
+  - **注意**：**GUI渲染线程与JS引擎线程是互斥的**，当JS引擎执行时GUI线程就会被挂起(Pending)，GUI更新会被保存在一个队列中等到JS空闲时立即被执行。
++ **JS引擎线程**
+  + JS引擎线程也称JS内核，负责处理Javascript脚本程序(V8引擎)。
+  + JS引擎线程负责解析Javascript脚本，运行代码。
+  + JS引擎一直等待任务队列中任务的回调过程，并加以处理，一个Tab页中有且仅有一个JS线程在运行JS程序。
+  + **注意**：**GUI渲染线程与JS引擎线程是互斥的**，所以如果JS执行时间太长，就会导致页面渲染不连贯，导致页面渲染加载阻塞。(比如在本站打开文章“优化网站性能的35条规则“时偶尔会出现此类情况”)。
++ **事件触发线程**
+  + 归属于浏览器而不是JS引擎，用来控制事件循环。
+  + 当JS引擎执行代码块setTimeout时(也可以来自浏览器内核的其它线程，如鼠标点击、AJax异步请求等)，会将对应任务添加到事件线程中。
+  + 当对应的事件符合触发条件时，该线程会把事件添加到任务队列尾，等待着JS引擎空闲。
+  + **注意**：由于JS单线程的关系，所以在处理任务队列中的任务时必须在JS引擎空闲时按照队列中先后顺序依此执行。
++ **定时触发线程**
+  + 即是`setTimeout`和`setInterval`所在的线程。
+  + 浏览器定时计数器并不是由Javascript引擎计数的(因为Javascript引擎是单线程的，处于阻塞状态会影响计时器的准确性)。
+  + 因此通过单独的线程来计时并触发定时(计时完毕后，添加到事件队列中，等待JS引擎空闲时执行)。
+  + **注意**：W3C在HTML标准中规定，规定要求setTimeout中低于4ms的时间间隔算作4ms。
++ **异步http请求线程**
+  + 在`XMLHttpRequest`在连接后是通过浏览器新开的一个线程请求
+  + 将检测到状态变更时，如果设置有回调函数，异步线程就产生**状态变更事件**，将这个回调再放入事件队列中。再由JavaScript引擎执行。
+![浏览器内核](https://user-gold-cdn.xitu.io/2018/1/21/1611938b2d39a5b2?imageslim)
 ## 5 Reference
-
-[How Browsers Work: Behind the scenes of modern web browsers](https://www.html5rocks.com/en/tutorials/internals/howbrowserswork/)
 
 [浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
 
 [从浏览器多进程到JS单线程，JS运行机制](https://juejin.im/post/5a6547d0f265da3e283a1df7)
+
+[如何由一道题完善自己的前端知识体系](http://www.dailichun.com/2018/03/12/whenyouenteraurl.html)
