--- a/_posts/2018-11-25-跨域问题总结.md
+++ b/_posts/2018-11-25-跨域问题总结.md
@@ -13,7 +13,6 @@ comments: true
 ​	我们知道，同源指的是协议、域名、端口号全部相同。同源策略(Same Origin Policy)是一种约定，它是浏览器最核心也是最基本的安全功能，如果缺少了同源策略，则浏览器的正常功能都可能会受到影响。Web是构建在同源策略基础之上的，浏览器只是针对同源策略的一种实现。同源策略是处于对用户安全的考量的，如果缺少了同源的限制，那又怎么能够确定别人的网站始终对你是友好的呢。针对非同源的情况制定了一些限制条件：
 
 1. 无法读取不同源的`Cookie`、`LocalStorage`、`indexDB`。
-
 2. 无法获得不同源的DOM。
 3. 不能向不同源的服务器发送Ajax请求。
 
@@ -21,7 +20,7 @@ comments: true
 
 ### 二、JSONP
 
-​       **JSONP**是指JSON Padding，**JSONP**是一种非官方跨域数据交换协议，由于`script`的src属性可以跨域请求，所以**JSONP**利用的就是浏览器的这个原理，需要通信时，动态插入一个javascript标签。请求的地址一般带有一个`callback`参数，假设需要请求的地址为http://localhost:3000?callback=show，服务器返回的代码一般是show()的JSON数据，而show函数恰恰是前端需要用的这个数据的函数。**JSONP**非常简单易用，自动补全API利用的就是**JSONP**。
+​	JSONP是指JSON Padding，JSONP是一种非官方跨域数据交换协议，由于`script`的src属性可以跨域请求，所以JSONP利用的就是浏览器的这个原理，需要通信时，动态插入一个javascript标签。请求的地址一般带有一个`callback`参数，假设需要请求的地址为<http://localhost:3000?callback=show>，服务器返回的代码一般是show()的JSON数据，而show函数恰恰是前端需要用的这个数据的函数。JSONP非常简单易用，自动补全API利用的就是JSONP。
 
 ​        一个简单的例子：
 
@@ -36,7 +35,7 @@ function handleResponse(data) {
 }
 ```
 
-​       JSONP解决跨域的本质：`<script>`标签可以请求不同域名下的资源，即`<script>`请求不受浏览器同源策略的影响。上例中的script会向http://example.com/服务器发送请求，这个请求的url后面带了个callback参数，是用来告诉服务器回调方法的方法名的。因为服务器收到请求后，会把相应的数据写进handleResponse的参数，也就是服务器会返回如下的脚本：
+​       JSONP解决跨域的本质：`<script>`标签可以请求不同域名下的资源，即`<script>`请求不受浏览器同源策略的影响。上例中的script会向<http://example.com/>服务器发送请求，这个请求的url后面带了个callback参数，是用来告诉服务器回调方法的方法名的。因为服务器收到请求后，会把相应的数据写进handleResponse的参数，也就是服务器会返回如下的脚本：
 
 ```javascript
 handleResponse({
@@ -44,7 +43,7 @@ handleResponse({
 });
 ```
 
-​       这样浏览器通过`<script>`下载的资源就是上面的脚本了，`<script>`下载完就会立即执行，也就是说[`http://example.com/ip?callback=handleResponse`](http://example.com/ip?callback=handleResponse)这个请求返回后就会立即执行上面的脚本代码，而这个脚本代码就是调用回调方法和拿到json数据了。
+​       这样浏览器通过`<script>`下载的资源就是上面的脚本了，`<script>`下载完就会立即执行，也就是说<http://example.com/ip?callback=handleResponse>这个请求返回后就会立即执行上面的脚本代码，而这个脚本代码就是调用回调方法和拿到Json数据了。
 
 ​	我们再来看一个例子：
 
@@ -76,7 +75,9 @@ res.writeHead(200,{
 res.end(`${callback}(${JSON.stringify(student)})`);
 ```
 
-　　**JSONP**有一个很大问题，就是只能进行GET请求。{: .notice}
+**JSONP**有一个很大问题，就是只能进行GET请求。
+
+{: .notice}
 
 ### 三、跨域源资源共享(CORS)
 
@@ -102,11 +103,9 @@ Access-Control-Allow-Origin: http://www.example.com
 
 　　假若请求是POST的话，Content-Type必须为下列之一：
 
-```gfm
 > application/x-www-form-urlencoded
 > mutipart/form-data
 > text/plain
-```
 
 　　不含有自定义头；
 
@@ -158,7 +157,9 @@ req.on("end", () => {
         "Access-Control-Allow-Origin": "*",
         "Content-Type": "application/json;charset=utf-8"
     });
-    if(postData.name === student.name && Number(postData.age) === student.age &&  postData.sex === student.sex) {
+    if(postData.name === student.name 
+       && Number(postData.age) === student.age 
+       && postData.sex === student.sex) {
         res.end(`yeah! ${postData.name} is a good guy!`);
     } else {
         res.end("No! a bad guy!");
@@ -224,7 +225,9 @@ req.on("end", () => {
         "Access-Control-Allow-Origin": "*",
         "Content-Type": "application/json;charset=utf-8"
     });
-    if(postData.name === student.name && Number(postData.age) === student.age &&  postData.sex === student.sex) {
+    if(postData.name === student.name 
+       && Number(postData.age) === student.age 
+       &&  postData.sex === student.sex) {
         res.end(`yeah! ${postData.name} is a good guy!`);
     } else {
         res.end("No! a bad guy!");
@@ -238,33 +241,33 @@ req.on("end", () => {
 
 　　可以将子域和主域的`document.domain`设为同一个主域来实现跨域。但前提条件是，这两个域名必须属于同一个基础域名，所用的协议，端口都要一致，否则无法通过`document.domain()`来进行跨域。
 
-​        **example 1:**
+​	**example 1:**
 
-​        如果想要在你的http://www.knightboy.cn/a.html页面里使用`<iframe>`调用另一个http://knightboy.cn/b.html页面。这时候你想在a页面里面获取b页面里的DOM，然后进行操作。然后你会发现你不能获得b的DOM。document.getElementById("myIFrame").contentWindow.document或window.parent.document.body因为两个窗口不同源而报错。
+​	如果想要在你的<http://www.knightboy.cn/a.html>页面里使用`<iframe>`调用另一个<http://knightboy.cn/b.html>页面。这时候你想在a页面里面获取b页面里的DOM，然后进行操作。然后你会发现你不能获得b的DOM。`document.getElementById("myIFrame").contentWindow.document`或`window.parent.document.body`因为两个窗口不同源而报错。
 
-​        这时候你只需要在a页面里和b页面里把document.domian设置成相同的值就可以在两个页面里操作Dom了。
+​	这时候你只需要在a页面里和b页面里把`document.domain`设置成相同的值就可以在两个页面里操作DOM了。
 
-​        **example 2:**
+​	**example 2:**
 
-​        如果你在http://www.knightboy.cn/a.html页面里写入了document.cookie = "key=hello world"；你在http://knightboy.cn/b.html页面是拿不到这个cookie的。
+​	如果你在<http://www.knightboy.cn/a.html>页面里写入了`document.cookie = "key=hello world"`；你在<http://knightboy.cn/b.html>页面是拿不到这个cookie的。
 
-​        原因在于，Cookie是服务器写入浏览器的一小段信息，只有同源的网页才能共享。但是，两个网页一级域名相同，二级域名不同，浏览器允许通过设置`document.domain`来共享Cookie。另外，服务器也可以在设置Cookie的时候，指定Cookie的所属域名为一级域名。这样的话，二级域名和三级域名不用做任何设置便可以读取这个Cookie。
+​	原因在于，Cookie是服务器写入浏览器的一小段信息，只有同源的网页才能共享。但是，两个网页一级域名相同，二级域名不同，浏览器允许通过设置`document.domain`来共享Cookie。另外，服务器也可以在设置Cookie的时候，指定Cookie的所属域名为一级域名。这样的话，二级域名和三级域名不用做任何设置便可以读取这个Cookie。
 
-​        有一点需要注意的是：document.domain虽然可以读写，但只能设置成自身或者是高一级的父域且主域必须相同。所以**只能解决一级域名相同二级域名不同的跨域问题。**还有就是**document.domain只适用于Cookie和iframe窗口，LocalStorage和IndexDB无法通过这种方法跨域。**
+​	有一点需要注意的是：`document.domain`虽然可以读写，但只能设置成自身或者是高一级的父域且主域必须相同。所以**只能解决一级域名相同二级域名不同的跨域问题。**还有就是**document.domain只适用于Cookie和iframe窗口，LocalStorage和IndexDB无法通过这种方法跨域。**
 
 ### **五、window.name跨域**
 
-​        window对象有一个name属性，该属性有个特征：即在一个窗口(window)的生命周期内，窗口载入的所有页面都是共享一个window.name的，每个页面对window.name都有读写的权限，window.name是持久存在一个窗口载入过的所有页面中的，并不会因新页面的载入而进行重置。注意，window.name的值只能是字符串的形式，且这个字符串的大小最大能容许2M左右甚至更大的容量，因浏览器而异，但一般是够用的。
+​	window对象有一个name属性，该属性有个特征：即在一个窗口(window)的生命周期内，窗口载入的所有页面都是共享一个window.name的，每个页面对window.name都有读写的权限，window.name是持久存在一个窗口载入过的所有页面中的，并不会因新页面的载入而进行重置。注意，window.name的值只能是字符串的形式，且这个字符串的大小最大能容许2M左右甚至更大的容量，因浏览器而异，但一般是够用的。
 
-​        **example 1:**
+​	**example 1:**
 
-　　现在在一个浏览器的一个标签页里打开http://www.knightboy.cn/a.html页面，你通过location.href = http://baidu.com/b.html，在同一个浏览器标签页里打开了不同域名下的页面。这时候这两个页面你可以使用window.name来传递参数。因为window.name指的是浏览器窗口的名字，只要浏览器窗口相同，那么无论在哪个页面里访问都是一样的。
+　　现在在一个浏览器的一个标签页里打开<http://www.knightboy.cn/a.html>页面，你通过location.href = <http://baidu.com/b.html>，在同一个浏览器标签页里打开了不同域名下的页面。这时候这两个页面你可以使用window.name来传递参数。因为window.name指的是浏览器窗口的名字，只要浏览器窗口相同，那么无论在哪个页面里访问都是一样的。
 
-​        **example 2:**
+​	**example 2:**
 
-　　你的http://www.knightboy.cn/a.html页面里使用`<iframe>`调用另一个http://baidu.com/b.html页面。这时候你想在a页面里获取b页面里的DOM，然后进行操作。结果会发现不能获得b中的DOM。同样会因为不同源而报错，和上面提到的不同之处就是两个页面的一级域名也不相同。这时候`document.domain`就解决不了了。
+　　你的<http://www.knightboy.cn/a.html>页面里使用`<iframe>`调用另一个<http://baidu.com/b.html>页面。这时候你想在a页面里获取b页面里的DOM，然后进行操作。结果会发现不能获得b中的DOM。同样会因为不同源而报错，和上面提到的不同之处就是两个页面的一级域名也不相同。这时候`document.domain`就解决不了了。
 
-​        浏览器窗口有window.name属性。这个属性的最大特点就是，无论是否同源，只要在同一个窗口里，前一个网页设置了这个属性，后一个网页可以读取它。比如当在b页面里设定`window.name="hello"`，你再返回到a页面，在a页面访问window.name，可以得到hello。这种方法的优点是，window.name容量很大，可以放置非常长的字符串；缺点是必须监听子窗口window.name属性的变化，影响网页性能。
+​	浏览器窗口有window.name属性。这个属性的最大特点就是，无论是否同源，只要在同一个窗口里，前一个网页设置了这个属性，后一个网页可以读取它。比如当在b页面里设定`window.name="hello"`，你再返回到a页面，在a页面访问window.name，可以得到hello。这种方法的优点是，window.name容量很大，可以放置非常长的字符串；缺点是必须监听子窗口window.name属性的变化，影响网页性能。
 
 ```html
 <!--a.html-->
@@ -277,14 +280,19 @@ req.on("end", () => {
         function getData() {//iframe载入后执行该函数
             var iframe = document.getElementById("proxy");
             iframe.onload=function() {//a.html与iframe属于同源了,可以互相访问
-                var data = iframe.contentWindow.name;//获取iframe里的window.name，也就是b.html页面给它设置的数据
+                var data = iframe.contentWindow.name;
+                //获取iframe里的window.name，也就是b.html页面给它设置的数据
                 alert(data);
         }
-         iframe.src="data.html";//这里的data.html为随便的一个页面，目的是，使得a.html能访问到iframe里的内容，也可设置成about:blank
+         iframe.src="data.html";//这里的data.html为随便的一个页面，
+            					//目的是，使得a.html能访问到iframe里的内容，
+            					//也可设置成about:blank
     </script>    
 <head>
 <body>
-    <iframe id="proxy" src="http://baidu.com/b.html" style="display:none" onload="getData()"></iframe>
+    <iframe id="proxy" src="http://baidu.com/b.html" 
+            style="display:none" onload="getData()">
+    </iframe>
 </body>
 </html>
 ```
@@ -328,7 +336,7 @@ var popUp = window.open('http://localhost:3000', 'title');
 popUp.postMessage('Hello World!', 'http://localhost:3000');
 ```
 
-　　同时在http://localhost:3000的页面里监听message事件：
+　　同时在<http://localhost:3000>的页面里监听message事件：
 
 ```javascript
 window.onload = function() {
@@ -338,7 +346,7 @@ function onmessage(event) {
     if(event.origin == 'http://localhost:8080') {//"发送方a的域名"
         console.log(event.data);//"Hello World!"
     } else {
-    　　console.log(event.data);//"Hello World!"
+		console.log(event.data);//"Hello World!"
     }
 }
 ```
@@ -388,7 +396,7 @@ window.addEventListener("message", (e)=>{
 
 ### **七、片段识别符实现跨域**
 
-　　片段识别符就是指URL的#号后面的部分。比如，http://example.com/x.html#fragment的`#fragment`。如果只是改变片段标识符，页面不会重复刷新。父窗口和iframe的子窗口之间的通讯或者是`window.open`打开的子窗口之间的通讯。
+　　片段识别符就是指URL的#号后面的部分。比如，<http://example.com/x.html#fragment>的`#fragment`。如果只是改变片段标识符，页面不会重复刷新。父窗口和iframe的子窗口之间的通讯或者是`window.open`打开的子窗口之间的通讯。
 
 　　父窗口可以把信息，写入子窗口的片段标识符。
 
@@ -413,11 +421,11 @@ function checkMessage() {
 parent.location.href = target + '#' + hash;
 ```
 
-　　总之，父窗口改变子窗口的url的#号后面的部分，后者把要传递的的参数写在#后面，子窗口监听`window.onhashchange`事件，得到通知，读取`window.location.hash`解析出有用的数据。同时子窗口也可以向父窗口传递数据。
+　　总之，父窗口改变子窗口的url的`#`号后面的部分，后者把要传递的的参数写在#后面，子窗口监听`window.onhashchange`事件，得到通知，读取`window.location.hash`解析出有用的数据。同时子窗口也可以向父窗口传递数据。
 
 ### Reference
 
-###### 2018.07.14 首次发布于博客园(https://www.cnblogs.com/princess-knight/p/9311197.html)
+##### 2018.07.14 首次发布于[博客园](https://www.cnblogs.com/princess-knight/p/9311197.html)
 
 [跨域同源政策及其规避方法](http://www.ruanyifeng.com/blog/2016/04/same-origin-policy.html)
 
